--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "rebuild-debug": "npm run clean && npm run build-vendor-debug && npm run build-app-debug",
     "build-vendor-debug": "webpack --config ./.config/webpack.vendor.js --bail",
     "build-vendor-release": "webpack --config ./.config/webpack.vendor.js --bail --env.concat --env.uglify",
-    "build-app-debug": "webpack --config ./source/app-basic-test/webpack.js --bail --verbose --env.serve --watch",
+    "build-app-debug": "webpack --config ./source/app-basic-test/webpack.js --bail",
     "build-app-release": "webpack --config ./source/app-basic-test/webpack.js --bail --env.concat --env.uglify",
     "serve": "webpack-dev-server --config ./source/app-basic-test/webpack.js --host design-local.cricut.com --content-base ./dist --open",
     "build-profile": "webpack --config ./webpack.app.js --profile --json > ./dist/webpack-profile.json && echo \"TOOL: http://webpack.github.com/analyse\" && webpack-bundle-analyzer ./dist/webpack-profile.json",
@@ -20,9 +20,12 @@
     "@types/angular": "^1.6.39",
     "@types/angular-cookies": "^1.4.5",
     "@types/bowser": "^1.0.31",
+    "@types/lodash": "^4.14.88",
     "@types/node": "^8.0.57",
     "add-asset-html-webpack-plugin": "^2.1.2",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "jsesc": "^2.5.1",
     "rimraf": "^2.6.2",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
@@ -31,6 +34,7 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.11",
     "angular": "^1.6.7",
     "angular-cookies": "^1.6.7",
     "bowser": "^1.8.1"
