--- a/.config/tsconfig.base.json
+++ b/.config/tsconfig.base.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "strict": true,
+        
         "module": "amd",
         "moduleResolution": "node",
         
