--- a/package.json
+++ b/package.json
@@ -17,29 +17,32 @@
   "author": "Christopher Schear (chris.npm@schear.us)",
   "license": "ISC",
   "devDependencies": {
-    "@types/angular": "^1.6.39",
-    "@types/angular-cookies": "^1.4.5",
-    "@types/bowser": "^1.0.31",
-    "@types/lodash": "^4.14.88",
-    "@types/node": "^8.0.57",
-    "add-asset-html-webpack-plugin": "^2.1.2",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "jsesc": "^2.5.1",
-    "rimraf": "^2.6.2",
-    "ts-checker-webpack-plugin": "^0.3.0",
-    "ts-loader": "^3.2.0",
-    "tslint": "^5.8.0",
-    "tslint-loader": "^3.5.3",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-server": "^2.9.7"
+    "@uirouter/angularjs": "1.0.11",
+    "@types/angular": "1.6.39",
+    "@types/angular-cookies": "1.4.5",
+    "@types/bowser": "1.0.31",
+    "@types/lodash": "4.14.88",
+    "@types/node": "8.0.57",
+    "html-loader": "0.5.1",
+    "html-webpack-plugin": "2.30.1",
+    "jsesc": "2.5.1",
+    "rimraf": "2.6.2",
+    "ts-checker-webpack-plugin": "0.3.0",
+    "ts-loader": "3.2.0",
+    "tslint": "5.8.0",
+    "tslint-loader": "3.5.3",
+    "typescript": "2.6.2",
+    "webpack": "3.10.0",
+    "webpack-bundle-analyzer": "2.9.1",
+    "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.11",
-    "angular": "^1.6.7",
-    "angular-cookies": "^1.6.7",
-    "bowser": "^1.8.1"
+    "angular": "1.6.7",
+    "angular-cookies": "1.6.7",
+    "bowser": "1.8.1"
+  },
+  "engines": {
+    "node": "9.2.1",
+    "npm": "5.5.1"
   }
 }
