--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   "author": "Christopher Schear (chris.npm@schear.us)",
   "license": "ISC",
   "devDependencies": {
-    "@uirouter/angularjs": "1.0.11",
     "@types/angular": "1.6.39",
     "@types/angular-cookies": "1.4.5",
     "@types/bowser": "1.0.31",
     "@types/lodash": "4.14.88",
     "@types/node": "8.0.57",
+    "@uirouter/angularjs": "1.0.11",
+    "fork-ts-checker-webpack-plugin": "^0.2.9",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "jsesc": "2.5.1",
     "rimraf": "2.6.2",
-    "ts-checker-webpack-plugin": "0.3.0",
     "ts-loader": "3.2.0",
     "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
