--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "node builder/builder.js cleangg",
-    "build": "node builder/builder.js build",
-    "rebuild": "node builder/builder.js rebuild",
+    "clean": "node builder/builder.js -c clean",
+    "build": "node builder/builder.js -c build",
+    "serve": "node builder/builder.js -c serve",
 
-    "rebuild-debug": "npm run clean && npm run build-vendor-debug && npm run build-app-debug",
-    "build-vendor-debug": "webpack --config ./.config/webpack.vendor.js --bail",
-    "build-vendor-release": "webpack --config ./.config/webpack.vendor.js --bail --env.concat --env.uglify",
-    "build-app-debug": "webpack --config ./source/app-basic-test/webpack.js --bail",
-    "build-app-release": "webpack --config ./source/app-basic-test/webpack.js --bail --env.concat --env.uglify",
-    "serve": "webpack-dev-server --config ./source/app-basic-test/webpack.js --host design-local.cricut.com --content-base ./dist --open",
-    "build-profile": "webpack --config ./source/app-basic-test/webpack.js --profile --json > ./dist/app-profile.json && webpack --config ./.config/webpack.vendor.js --profile --json > ./dist/vendor-profile.json && echo \"TOOL: http://webpack.github.com/analyse\" && webpack-bundle-analyzer ./dist/app-profile.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+    "_clean": "node builder/builder.js -a clean",
+    "_build": "node builder/builder.js build",
+    "_rebuild": "node builder/builder.js rebuild",
+    "_rebuild-debug": "npm run clean && npm run build-vendor-debug && npm run build-app-debug",
+    "_build-vendor-debug": "webpack --config ./.config/webpack.vendor.js --bail",
+    "_build-vendor-release": "webpack --config ./.config/webpack.vendor.js --bail --env.concat --env.uglify",
+    "_build-app-debug": "webpack --config ./source/app-basic-test/webpack.js --bail",
+    "_build-app-release": "webpack --config ./source/app-basic-test/webpack.js --bail --env.concat --env.uglify",
+    "_serve": "webpack-dev-server --config ./source/app-basic-test/webpack.js --host design-local.cricut.com --content-base ./dist --open",
+    "_build-profile": "webpack --config ./source/app-basic-test/webpack.js --profile --json > ./dist/app-profile.json && webpack --config ./.config/webpack.vendor.js --profile --json > ./dist/vendor-profile.json && echo \"TOOL: http://webpack.github.com/analyse\" && webpack-bundle-analyzer ./dist/app-profile.json",
+    "_test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christopher Schear (chris.npm@schear.us)",
   "license": "ISC",
@@ -24,20 +28,23 @@
     "@types/angular-cookies": "1.4.5",
     "@types/bowser": "1.0.31",
     "@types/lodash": "4.14.88",
+    "@types/minimist": "^1.2.0",
     "@types/node": "8.0.57",
     "@uirouter/angularjs": "1.0.11",
+    "chalk": "^2.3.0",
     "fork-ts-checker-webpack-plugin": "^0.2.9",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "jsesc": "2.5.1",
+    "minimist": "^1.2.0",
     "rimraf": "2.6.2",
     "ts-loader": "3.2.0",
     "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.6.2",
     "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.9.1",
-    "webpack-dev-server": "2.9.7"
+    "webpack-bundle-analyzer": "2.9.2",
+    "webpack-dev-server": "2.10.1"
   },
   "dependencies": {
     "angular": "1.6.7",
