--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "node builder/builder.js -c clean",
     "build": "node builder/builder.js -c build",
     "serve": "node builder/builder.js -c serve",
+    "profile": "node builder/builder.js -c profile",
     "_clean": "node builder/builder.js -a clean",
     "_build": "node builder/builder.js build",
     "_rebuild": "node builder/builder.js rebuild",
@@ -16,7 +17,6 @@
     "_build-app-debug": "webpack --config ./source/app-basic-test/webpack.js --bail",
     "_build-app-release": "webpack --config ./source/app-basic-test/webpack.js --bail --env.concat --env.uglify",
     "_serve": "webpack-dev-server --config ./source/app-basic-test/webpack.js --host design-local.cricut.com --content-base ./dist --open",
-    "_build-profile": "webpack --config ./source/app-basic-test/webpack.js --profile --json > ./dist/app-profile.json && webpack --config ./.config/webpack.vendor.js --profile --json > ./dist/vendor-profile.json && echo \"TOOL: http://webpack.github.com/analyse\" && webpack-bundle-analyzer ./dist/app-profile.json",
     "_test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christopher Schear (chris.npm@schear.us)",
@@ -26,17 +26,20 @@
     "@types/angular-cookies": "1.4.5",
     "@types/bowser": "1.0.31",
     "@types/lodash": "4.14.88",
-    "@types/minimist": "^1.2.0",
+    "@types/minimist": "1.2.0",
     "@types/node": "8.0.57",
+    "@types/opn": "^5.1.0",
     "@uirouter/angularjs": "1.0.11",
     "chalk": "^2.3.0",
     "fork-ts-checker-webpack-plugin": "^0.2.9",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "jsesc": "2.5.1",
-    "minimist": "^1.2.0",
+    "minimist": "1.2.0",
+    "opn": "^5.1.0",
     "rimraf": "2.6.2",
     "ts-loader": "3.2.0",
+    "tslib": "1.8.1",
     "tslint": "5.9.1",
     "tslint-loader": "3.5.3",
     "typescript": "2.6.2",
