--- a/.config/tsconfig.base.json
+++ b/.config/tsconfig.base.json
@@ -6,6 +6,7 @@
         "moduleResolution": "node",
         
         "sourceMap": true,
+        "declaration": true,
  
         "target": "es5",
         "lib": ["dom", "es2015.promise", "es5"],
