--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "node builder/builder.js -c clean",
     "build": "node builder/builder.js -c build",
+    "watch": "node builder/builder.js -c watch",
     "serve": "node builder/builder.js -c serve",
     "profile": "node builder/builder.js -c profile",
     "_clean": "node builder/builder.js -a clean",
@@ -22,21 +23,24 @@
   "author": "Christopher Schear (chris.npm@schear.us)",
   "license": "ISC",
   "devDependencies": {
-    "@types/angular": "1.6.39",
+    "@types/angular": "1.6.40",
     "@types/angular-cookies": "1.4.5",
-    "@types/bowser": "1.0.31",
-    "@types/lodash": "4.14.88",
+    "@types/bowser": "1.1.1",
+    "@types/chokidar": "^1.7.4",
+    "@types/express": "^4.11.0",
+    "@types/lodash": "4.14.92",
     "@types/minimist": "1.2.0",
-    "@types/node": "8.0.57",
+    "@types/node": "9.3.0",
     "@types/opn": "^5.1.0",
-    "@uirouter/angularjs": "1.0.11",
+    "@uirouter/angularjs": "1.0.13",
     "chalk": "^2.3.0",
-    "fork-ts-checker-webpack-plugin": "^0.2.9",
-    "html-loader": "0.5.1",
+    "express": "^4.16.2",
+    "fork-ts-checker-webpack-plugin": "0.3.0",
+    "html-loader": "0.5.4",
     "html-webpack-plugin": "2.30.1",
     "jsesc": "2.5.1",
     "minimist": "1.2.0",
-    "opn": "^5.1.0",
+    "opn": "5.1.0",
     "rimraf": "2.6.2",
     "ts-loader": "3.2.0",
     "tslib": "1.8.1",
@@ -44,13 +48,13 @@
     "tslint-loader": "3.5.3",
     "typescript": "2.6.2",
     "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.9.2",
-    "webpack-dev-server": "2.10.1"
+    "webpack-bundle-analyzer": "2.9.2"
   },
   "dependencies": {
-    "angular": "1.6.7",
-    "angular-cookies": "1.6.7",
-    "bowser": "1.8.1"
+    "angular": "1.6.8",
+    "angular-cookies": "1.6.8",
+    "bowser": "1.9.1",
+    "chokidar": "^2.0.0"
   },
   "engines": {
     "node": "9.2.1",
