--- a/modules/lib-common2/tsconfig.json
+++ b/modules/lib-common2/tsconfig.json
@@ -5,7 +5,7 @@
         
         "baseUrl": ".",
         "paths": {
-          "lib-common/*": [ "../../dist/js/lib-common" ]
+          "lib-common/*": [ "../lib-common/source/*" ]
         }
     }
 }
