--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/bowser": "1.1.1",
     "@types/chokidar": "^1.7.4",
     "@types/express": "^4.11.0",
+    "@types/jasmine": "^2.8.4",
     "@types/lodash": "4.14.92",
     "@types/minimist": "1.2.0",
     "@types/node": "9.3.0",
