--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "node builder/builder.js -c build",
     "watch": "node builder/builder.js -c watch",
     "serve": "node builder/builder.js -c serve",
-    "profile": "node builder/builder.js -c profile"
+    "profile": "node builder/builder.js -c profile",
+    "test": "node builder/builder.js -c test"
   },
   "author": "Christopher Schear (chris.npm@schear.us)",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "chalk": "^2.3.0",
     "express": "^4.16.2",
     "fork-ts-checker-webpack-plugin": "0.3.0",
+    "glob": "^7.1.2",
     "html-loader": "0.5.4",
     "html-webpack-plugin": "2.30.1",
     "jsesc": "2.5.1",
