--- a/package.json
+++ b/package.json
@@ -28,10 +28,19 @@
     "chalk": "^2.3.0",
     "express": "^4.16.2",
     "fork-ts-checker-webpack-plugin": "0.3.0",
+    "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "html-loader": "0.5.4",
     "html-webpack-plugin": "2.30.1",
+    "jasmine": "^2.8.0",
     "jsesc": "2.5.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-fixture": "^0.2.6",
+    "karma-jasmine": "^1.1.1",
+    "karma-json-fixtures-preprocessor": "0.0.6",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-typescript": "^3.0.9",
     "minimist": "1.2.0",
     "opn": "5.1.0",
     "rimraf": "2.6.2",
