--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsesc": "2.5.1",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-fixture": "^0.2.6",
     "karma-jasmine": "^1.1.1",
     "karma-json-fixtures-preprocessor": "0.0.6",
