--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,9 @@ image:
 environment:
   nodejs_version: "9"
 
+  CODECOV_KEY:
+    secure: OdwtlGl5EJcLO1aqmgsxhnOC9sSOO6U/Wi06gm6o+2qIl1nxh+rJW8Z2mmqhJ/2k
+
   matrix:
      - GENERATOR: "Visual Studio 17"
        CONFIG: Release
@@ -16,6 +19,7 @@ install:
 
 build_script:
   - npm run build -- vendor && npm run test -- app-basic-test
+  - node .\node_modules\codecov\bin\codecov -t %CODECOV_KEY%
   - npm run clean
   - npm run build -- vendor app-basic-test
 
