--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
     "tslint-loader": "3.5.3",
     "typescript": "2.6.2",
     "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.9.2"
+    "webpack-bundle-analyzer": "2.9.2",
+    "chokidar": "^2.0.0",
+    "codecov": "^3.0.0"
   },
   "dependencies": {
     "angular": "1.6.8",
     "angular-cookies": "1.6.8",
-    "bowser": "1.9.1",
-    "chokidar": "^2.0.0"
+    "bowser": "1.9.1"
   },
   "engines": {
     "node": "9.2.1",
