--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   - npm --version
   - node --version
   - npm install
-  - npm ls --depth=0
+  #- npm ls --depth=0
 
 build_script:
   - npm run build -- vendor && npm run test -- app-basic-test
