--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,10 +15,9 @@ install:
   - npm --version
   - node --version
   - npm install
-  #- npm ls --depth=0
-
+  
 build_script:
-  - npm run build -- vendor && npm run test -- app-basic-test
+  - node .\node_modules\karma\bin\karma start ./.config/karma.config.js
   - node .\node_modules\codecov\bin\codecov -t %CODECOV_KEY%
   - npm run clean
   - npm run build -- vendor app-basic-test
