--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "chalk": "^2.3.0",
     "chokidar": "^2.0.0",
     "codecov": "^3.0.0",
+    "css-loader": "^0.28.9",
     "express": "^4.16.2",
     "fork-ts-checker-webpack-plugin": "0.3.0",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
-    "html-loader": "0.5.4",
+    "html-loader": "^0.5.4",
     "html-webpack-plugin": "2.30.1",
     "jasmine": "^2.8.0",
     "jsesc": "2.5.1",
@@ -44,9 +45,12 @@
     "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-mocha-reporter": "^2.2.5",
     "karma-typescript": "^3.0.9",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "minimist": "1.2.0",
     "opn": "5.1.0",
     "rimraf": "2.6.2",
+    "style-loader": "^0.19.1",
     "ts-loader": "3.2.0",
     "tslib": "1.8.1",
     "tslint": "5.9.1",
