Combine webpack & more

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "9.3.0",
     "@types/opn": "^5.1.0",
     "@uirouter/angularjs": "1.0.13",
+    "angular-ui-bootstrap": "^2.5.6",
     "chalk": "^2.3.0",
     "chokidar": "^2.0.0",
     "codecov": "^3.0.0",
@@ -50,8 +51,10 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "minimist": "1.2.0",
+    "node-sass": "^4.7.2",
     "opn": "5.1.0",
     "rimraf": "2.6.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "ts-loader": "3.2.0",
     "tslib": "1.8.1",
@@ -59,12 +62,14 @@
     "tslint-loader": "3.5.3",
     "typescript": "2.6.2",
     "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.9.2"
-  },
-  "dependencies": {
+    "webpack-bundle-analyzer": "2.9.2",
     "angular": "1.6.8",
     "angular-cookies": "1.6.8",
+    "bootstrap": "3.3.7",
     "bowser": "1.9.1"
+  },
+  "dependencies": {
+
   },
   "engines": {
     "node": "9.2.1",
