--- a/.travis.yml
+++ b/.travis.yml
@@ -26,12 +26,13 @@ script:
 - echo '.'
 
 - echo 'Testing...' && echo -en 'travis_fold:start:script.1\\r'
-- npm run build -- vendor && npm run test -- app-basic-test
+- npm run test -- app-basic-test
 - echo -en 'travis_fold:end:script.1\\r'
 
 - echo 'Building...' && echo -en 'travis_fold:start:script.2\\r'
 - npm run clean
-- npm run build -- vendor app-basic-test
+- npm run build -- app-basic-test --vendor
+- npm run build -- app-basic-test
 - echo -en 'travis_fold:end:script.2\\r'
 
 
