--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chokidar": "^2.0.0",
     "codecov": "^3.0.0",
     "css-loader": "^0.28.9",
+    "electron": "^1.7.10",
     "express": "^4.16.2",
     "file-loader": "^1.1.6",
     "font-awesome": "^4.7.0",
