--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/angular": "1.6.40",
     "@types/angular-cookies": "1.4.5",
+    "@types/angular-mocks": "^1.5.11",
     "@types/bowser": "1.1.1",
     "@types/chokidar": "^1.7.4",
     "@types/express": "^4.11.0",
@@ -27,6 +28,7 @@
     "@uirouter/angularjs": "1.0.13",
     "angular": "1.6.8",
     "angular-cookies": "1.6.8",
+    "angular-mocks": "1.6.8",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "3.3.7",
     "bowser": "1.9.1",
