--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "minimist": "1.2.0",
     "node-sass": "^4.7.2",
     "opn": "5.1.0",
+    "prettier": "1.10.2",
+    "prettier-webpack-plugin": "^0.2.2",
     "rimraf": "2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
