--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ before_install:
 - git clone --depth 1 https://github.com/creationix/nvm.git ~/.nvm
 - source ~/.nvm/nvm.sh && nvm install 9 && nvm use 9
 
+- export CHROME_BIN=chromium-browser
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+
 before_script:
 - npm --version
 - node --version
