--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ matrix:
   - os: osx
     env: COMPILER=clang++
 
+addons:
+  chrome: stable
+
 cache:
   directories:
     - $HOME/.npm
@@ -23,7 +26,7 @@ before_install:
 
 - export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+#- sh -e /etc/init.d/xvfb start
 
 before_script:
 - npm --version
